--- a/templates/company.html
+++ b/templates/company.html
@@ -36,7 +36,15 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
       {{gettext("Bringing NFTs and DeFi to the masses")}}
     </h1>
     <div class="segment-subtitle ml-3 mr-3">
-      {{gettext("Origin was founded in 2017 by successful Silicon Valley entrepreneurs and has a team of experienced engineers from iconic tech companies like YouTube, Google, PayPal, and DropBox. Today, Origin is a global community with hundreds of open-source contributors and thousands of token holders. We work in public and you can always find at least one of us awake in our <a href='https://www.originprotocol.com/discord'>Discord</a>.<br><br>")}}
+      {{gettext("Origin was founded in 2017 by successful Silicon Valley entrepreneurs and has a team of experienced engineers from iconic tech companies like YouTube, Google, PayPal, and DropBox. Today, Origin is a global community with hundreds of open-source contributors and thousands of token holders.<br><br>Origin's flagship products are <a href='https://story.xyz'>Origin Story</a>, which has powered numerous high-profile, record-breaking NFT drops, and <a href='https://ousd.com'>Origin Dollar</a>, the first stablecoin that earns a yield while it's still in your wallet. 
+       <br><br>Origin's platform and governance token is <a href='/dashboard'>OGN</a> that trades on <a href='https://pro.coinbase.com/trade/OGN-USD'>Coinbase</a>, <a href='https://www.binance.com/en/register?ref=38914658'>Binance</a>, <a href='https://uniswap.exchange/swap?outputCurrency=0x8207c1FfC5B6804F6024322CcF34F29c3541Ae26'>Uniswap</a>, and other top exchanges.")}}
+    </div>
+    <div
+      class="d-flex justify-content-center mt-4 pt-2 flex-column flex-md-row"
+    >
+      <a class="white-button-blue-border m-2" href="/dashboard"
+        >{{gettext("Learn more about OGN")}}</a
+      >
     </div>
 
   </div>
