--- a/templates/videos.html
+++ b/templates/videos.html
@@ -14,6 +14,9 @@
       <div class="row">
         <div class="col-12">
           <h1>Videos</h1>
+          <div class="alert alert-warning" role="alert">
+           <strong>Much of this content is out of date. Since finding traction in NFTs and DeFi, our team is no longer focused on decentralized marketplaces and the sharing economy. The videos are made available for historical context and posterity.</strong>
+          </div>
           <div class="category-tab-groups">
             <a href="#" class="category-tab d-none d-md-flex" data-category-group="featured">{{ gettext("Featured") }}</a>
             <a href="#" class="category-tab d-none d-md-flex" data-category-group="employee">{{ gettext("Employee Videos") }}</a>
