minor updates to litepaper

--- a/templates/litepaper/sidebar.html
+++ b/templates/litepaper/sidebar.html
@@ -11,18 +11,18 @@
       <span>{{gettext("Introduction")}}</span>
     </a>
 
-    <a class="nav-link whitepaper-nav-title" href="#platform">
+    <a class="nav-link whitepaper-nav-title" href="#products">
       <span class="content-index">03</span> 
-      <span>{{gettext("Origin Commerce Platform")}}</span>
+      <span>{{gettext("Origin Products")}}</span>
     </a>
-      <a class="nav-link" href="#NFTlaunchpad">
-        <span>{{gettext("NFT Launchpad")}}</span>
+      <a class="nav-link" href="#story">
+        <span>{{gettext("Origin Story")}}</span>
       </a>
       <a class="nav-link" href="#ousd">
-        <span>{{gettext("The Origin Dollar (OUSD)")}}</span>
+        <span>{{gettext("Origin Dollar (OUSD)")}}</span>
       </a>
       <a class="nav-link" href="#ogn">
-        <span>{{gettext("The Origin Token (OGN)")}}</span>
+        <span>{{gettext("Origin Token (OGN)")}}</span>
       </a>
 
     <a class="nav-link whitepaper-nav-title" href="#team">
