fix mobile styles

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -27,6 +27,46 @@
   </div>
 
   <div class="buy-sell-block d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
+    <h1 class='mb-5' style='max-width:600px'>{{gettext("Origin's flagship products are tackling the fastest growing verticals in Web3")}}</h1>
+    <div class="segment-subtitle mb-5">{{gettext("")}}</div>
+    <div class="container mb-6">
+      <div class="row like-table align-items-center">
+
+        <div class="col-12 order-md-1 col-md-4 text-center">
+          <a href="https://ousd.com"><img src="/static/img/ousd/ousd-coin.svg"></a>
+        </div>
+        <div class="col-12 order-md-4 col-md-4 text-center p-4">
+          Origin Dollar (OUSD) is the first stablecoin that earns a yield while it's still in your wallet. Access DeFi yields without any of the hassles. No staking. No lockups.
+        </div>
+        <div class="col-12 order-md-6 col-md-4 text-center p-4 mb-3">
+          <a class="btn white-border-button" href="https://ousd.com">{{gettext("Origin Dollar")}}</a>
+        </div>
+    
+        <div class="col-12 order-md-2 col-md-4 text-center">
+          <a href="https://story.xyz"><img class='mt-5 mb-5' style='filter:invert(1)' src="/static/img/origin-story-logo.png" srcset="/static/img/origin-story-logo@2x.png 2x, /static/img/origin-story-logo@3x.png 3x"></a>
+        </div>
+        <div class="col-12 order-md-4 col-md-4 text-center p-4">
+          Origin Story is where top creators sell their NFTs. Now you can too! Personalized storefronts. Flexible sale formats. Secondary royalties. No code required.
+        </div>
+        <div class="col-12 order-md-7 col-md-4 text-center p-4 mb-3">
+          <a class="btn white-border-button" href="https://story.xyz">{{gettext("Origin Story")}}</a>  
+        </div>
+
+        <div class="col-12 order-md-3 col-md-4 text-center">
+          <a href="/ogn-token"><img src="/static/img/landing/nft-3.png" srcset="/static/img/landing/nft-3@2x.png 2x, /static/img/landing/nft-3@3x.png 3x"></a>
+        </div>
+        <div class="col-12 order-md-5 col-md-4 text-center p-4">
+          Origin Token (OGN) allows you to own a stake in the Origin ecosystem. Believe NFTs are the future? Want governance privileges? Buy OGN on Coinbase, Binance, or Uniswap.
+        </div>
+        <div class="col-12 order-md-8 col-md-4 text-center p-4 mb-3">
+          <a class="btn white-border-button" href="/dashboard">{{gettext("Origin Token")}}</a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="buy-sell-block d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
     <h1 class='mb-5'>{{gettext("Origin's flagship products are tackling<br>the fastest growing verticals in Web3")}}</h1>
     <div class="segment-subtitle mb-5">{{gettext("")}}</div>
     
@@ -65,7 +105,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- mailing list-->
   <div class="d-flex flex-column justify-content-between align-items-center" style='background-color:white'>
@@ -80,88 +120,6 @@
       </form>
     </div>
   </div>
-
-
-  <!-- Buy and Sell on Origin section -->
-  <!-- origin-marketplace-0.23.16.apk -->
-  <!-- <div class="buy-sell-block d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
-    <h1>{{gettext("Where top creators launch their NFTs")}}</h1>
-    <div class="segment-subtitle mx-3">{{gettext("Origin has hosted record-breaking NFT sales for top musicians, celebrities and creators. Sell NFTs on your own website, not someone else's marketplace.")}}</div>
-    <a class="mb-5 mt-5 btn btn-dark d-flex justify-content-center align-items-center" href="https://story.xyz">
-      {{gettext("Interested in running an NFT sale?")}}</a>
-
-      <div class="container mb-6 nft-pitch">
-        <div class="row">
-          <div class="col-sm text-center p-4 custom-domain">
-            <div class="img-wrapper">
-              <img src="/static/img/landing/nft-1.png" srcset="/static/img/landing/nft-1@2x.png 2x, /static/img/landing/nft-1@3x.png 3x">
-            </div>
-            <p>You control the experience. Host your NFT sale on your own domain and start growing your community.</p>
-          </div>
-          <div class="col-sm text-center p-4 more-sales inline-table">
-            <div class="img-wrapper">
-              <img src="/static/img/landing/nft-2.png" srcset="/static/img/landing/nft-2@2x.png 2x, /static/img/landing/nft-2@3x.png 3x">
-            </div>
-            <p>Run a more profitable sale with time-limited open-editions or a unique leaderboard auction.</p>
-          </div>
-          <div class="col-sm text-center p-4 join-ogn">
-            <div class="img-wrapper">
-              <img src="/static/img/landing/nft-3.png" srcset="/static/img/landing/nft-3@2x.png 2x, /static/img/landing/nft-3@3x.png 3x">
-            </div>
-            <p>Participate in the network with OGN. Available on top exchanges like Coinbase and Binance.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <!-- <div class="buy-sell-block ousd-pitch d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
-    <div class="container text-center">
-      <h1 class="pt-3">Origin Dollar is the first stablecoin that earns yield while sitting in your wallet</h1>
-      <p class="d-none d-sm-block">Get access to exciting DeFi returns, with none of the hassles.</p>
-      <a class="mb-5 mt-5 btn justify-content-center align-items-center" href="https://www.ousd.com">
-        {{gettext("Learn more about OUSD")}}</a>
-      <p class="d-none d-sm-block">Currently earning</p>
-      <h2>{{ousd_apy}}% APY</h2>
-
-
-    </div>
-  </div> -->
-  <!-- Decentralised marketplaces inevitable -->
-  <!-- <div class="decentralised-marketplaces d-flex flex-column justify-content-center align-items-center">
-    <h1 class="segment-title ml-4 mr-4">{{gettext("Blockchain-powered commerce is the future")}}</h1>
-    <div class="segment-subtitle ml-3 mr-3">{{gettext("Blockchain will redefine online commerce and allow both buyers and sellers to benefit from lower costs and improved infrastructure")}}</div>
-    <div class="tiles-holder d-flex justify-content-center flex-wrap">
-      <div class="d-flex flex-column tile align-items-center mb-5 mb-md-0">
-        <div class="image-holder d-flex align-items-center justify-content-center">
-          <img class="mw-200" src="/static/img/landing/lower-fees@2x.jpg"/>
-        </div>
-        <div class="tile-name">{{gettext("Lower fees")}}</div>
-        <div class="tile-text">{{gettext("Buyers and sellers share 20-30%% in savings when middlemen are removed")}}</div>
-      </div>
-      <div class="d-flex flex-column tile align-items-center mb-5 mb-md-0">
-        <div class="image-holder d-flex align-items-center justify-content-center">
-          <img class="mw-200" src="/static/img/landing/better-incentives@2x.jpg"/>
-        </div>
-        <div class="tile-name">{{gettext("Better incentives")}}</div>
-        <div class="tile-text">{{gettext("Everyone can own a stake in the network by contributing to its growth")}}</div>
-      </div>
-      <div class="d-flex flex-column tile align-items-center mb-5 mb-md-0">
-        <div class="image-holder d-flex align-items-center justify-content-center">
-          <img class="mw-200" src="/static/img/landing/increased-access@2x.jpg"/>
-        </div>
-        <div class="tile-name">{{gettext("Increased access")}}</div>
-        <div class="tile-text">{{gettext("2 billion unbanked people can access new markets globally")}}</div>
-      </div>
-      <div class="d-flex flex-column tile align-items-center mb-5 mb-md-0">
-        <div class="image-holder d-flex align-items-center justify-content-center">
-          <img class="mw-200" src="/static/img/landing/more-resilience@2x.jpg"/>
-        </div>
-        <div class="tile-name">{{gettext("More resilience")}}</div>
-        <div class="tile-text">{{gettext("Blockchain-powered commerce can't be banned or shut down")}}</div>
-      </div>
-    </div>
-  </div> -->
 
   {%if ogn_stats %}
 
@@ -219,31 +177,6 @@
 
   {% endif %}
 
-<!-- 
-<div class="video-block vc-backed screen-size-segment d-flex flex-column justify-content-between align-items-center">
-  <div id="landing-video2" class="full-screen-video d-none" ></div>
-  <div class="background-video">
-    <div class="video-holder d-flex flex-column justify-content-end align-items-center">
-      <div id="landing-video-background2" ></div>
-    </div>
-  </div>
-  <div class="video-overlay blue"></div>
-  <div id="landing-video-poster2" class="video-overlay-poster"></div>
-  <div class="contents d-flex flex-column justify-content-between align-items-center">
-    <h1 class="video-title small mt-5 pt-4">{{gettext("We are backed by top venture capital firms and investors in Silicon Valley and around the world")}}</h1>
-    <button id="landing-video-button2" class="play-button d-flex justify-content-center align-items-center m-4">
-      <img class="ml-2" src="/static/img/landing/play-triangle.svg"/>
-    </button>
-    <div class="watch mt-2 mb-auto">{{gettext("Watch the video")}}</div>
-    <div class="bottom d-flex justify-content-center flex-wrap">
-      <img src="/static/img/landing/pantera.svg"/>
-      <img src="/static/img/landing/foundation-capital.svg"/>
-      <img src="/static/img/landing/preangel.svg"/>
-      <img src="/static/img/landing/hashed.svg"/>
-    </div>
-    <a class="button mb-md-6 mb-5" href="/investors">{{gettext("Learn more about our investors")}}</a>
-  </div>
-</div> -->
 
   <!-- World class team -->
   <div class="world-class d-flex flex-column justify-content-center align-items-center pb-5">
