--- a/templates/team.html
+++ b/templates/team.html
@@ -544,6 +544,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
       </div>
       <div class="d-flex flex-sm-row flex-wrap align-items-center justify-content-sm-center justify-content-around">
        
+        <div class="col-12 col-sm-6 col-lg-4">
         <div class="team-member">
           <div class="headshot-wrapper">
             <img src="/static/img/headshot-zoe.jpg" class="headshot" alt="Zoe Hoang headshot" />
@@ -552,6 +553,8 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             {{ gettext("Zoe Hoang") }}
           </div>
         </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4">
         <div class="team-member">
           <div class="headshot-wrapper">
             <img src="/static/img/headshot-moises.jpg" class="headshot" alt="Moisés Sosa headshot" />
@@ -560,6 +563,8 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             {{ gettext("Moisés Sosa") }}
           </div>
         </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="team-member">
           <div class="headshot-wrapper">
             <img src="/static/img/headshot-kevin.png" class="headshot" alt="Kevin Lee headshot" />
@@ -568,6 +573,8 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             {{ gettext("Kevin Lee") }}
           </div>
         </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="team-member">
           <div class="headshot-wrapper">
             <img src="/static/img/headshot-danil.jpeg" class="headshot" alt="Danil Myakin headshot" />
@@ -576,6 +583,8 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             {{ gettext("Danil Myakin") }}
           </div>
         </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="team-member">
           <div class="headshot-wrapper">
             <img src="/static/img/headshot-joseph.jpg" class="headshot" alt="Joseph Stewart headshot" />
@@ -584,6 +593,8 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             {{ gettext("Joseph Stewart") }}
           </div>
         </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="team-member">
           <div class="headshot-wrapper">
             <img src="/static/img/headshot-erkan.png" class="headshot" alt="Erkan Ciftci headshot" />
@@ -592,6 +603,8 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             {{ gettext("Erkan Ciftci") }}
           </div>
         </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="team-member">
           <div class="headshot-wrapper">
             <img src="/static/img/headshot-stefano.jpg" class="headshot" alt="Stefano Terenzi headshot" />
@@ -600,6 +613,8 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             {{ gettext("Stefano Terenzi") }}
           </div>
         </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="team-member">
           <div class="headshot-wrapper">
             <img src="/static/img/headshot-zizen.jpg" class="headshot" alt="Zizen Chang headshot" />
@@ -608,6 +623,8 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             {{ gettext("Zizen Chang") }}
           </div>
         </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="team-member">
           <div class="headshot-wrapper">
             <img src="/static/img/headshot-lee.png" class="headshot" alt="Lee Gwangmyeong headshot" />
@@ -615,6 +632,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
           <div class="name">
             {{ gettext("Lee Gwangmyeong") }}
           </div>
+        </div>
         </div>
 
       </div>
