--- a/templates/ogn-token.html
+++ b/templates/ogn-token.html
@@ -146,7 +146,7 @@ endwith %}
         <div class="showcase-content">
           <h1 class="mb-3">{{gettext("Governance")}}</h1>
           <p>
-            {{gettext("Create and vote on proposals determining the future direction of Origin Dollar (OUSD), Dshop and the rest of the Origin platform. Accrue value generated from platform revenues.")}}
+            {{gettext("Create and vote on proposals determining the future direction of Origin Dollar (OUSD) and the rest of the Origin platform. Accrue value generated from platform revenues.")}}
           </p>
         </div>
         <div class="showcase-image">
