--- a/templates/footer.html
+++ b/templates/footer.html
@@ -15,7 +15,7 @@
           </form>
         </div>
         <div class="copyright-text flex-column mt-auto d-none d-md-flex">
-          <div>{{gettext("Copyright © ")}} {{ now.year}} {{gettext("Origin Protocol Inc. All rights reserved.")}}</div>
+          <div>{{gettext("Copyright © ")}} {{ now.year}} {{gettext("Origin Protocol Labs. All rights reserved.")}}</div>
           <div class="mt-2">
             <a class="pr-2" href="https://help.originprotocol.com">
               {{ gettext("Help") }}
