chris team page

--- a/templates/team.html
+++ b/templates/team.html
@@ -514,6 +514,25 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-chris.jpg" class="headshot" alt="Christopher Jacobs headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/apexearth/" target="_blank"
+                     rel="noopener noreferrer">{{ gettext("Christopher Jacobs") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Senior Engineer") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Chris previously worked at OCZ, Toshiba, Storcentric and Palo Alo Networks as a Full Stack / UI Engineer. He is a creative developer who has over 15 years experience architecting software solutions front-to-back.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
                   <img src="/static/img/headshot-you.png" class="headshot" alt="You headshot" />
                 </div>
                 <div class="name"><a href="https://" target="_blank"
