use twitter instead of linkedin for bio link

--- a/templates/team.html
+++ b/templates/team.html
@@ -55,7 +55,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   <img src="/static/img/headshot-josh.jpg" class="headshot" alt="Josh Fraser headshot" />
                 </div>
                 <div class="name">
-                  <a href="http://www.linkedin.com/in/joshuafraser" target="_blank"
+                  <a href="http://www.twitter.com/joshfraser" target="_blank"
                     rel="noopener noreferrer">{{ gettext("Josh Fraser") }}
                   </a>
                 </div>
