--- a/templates/team.html
+++ b/templates/team.html
@@ -525,7 +525,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Senior Engineer") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Chris previously worked at OCZ, Toshiba, Storcentric and Palo Alo Networks as a Full Stack / UI Engineer. He is a creative developer who has over 15 years experience architecting software solutions front-to-back.") }}
+                  {{ gettext("Chris previously worked at OCZ, Toshiba, Storcentric and Palo Alo Networks as a Full Stack / UI Engineer. He is a creative developer who has over 15 years experience architecting software solutions.") }}
                 </div>
               </div>
             </div>
